# mcclwrap

./: .gitignore  Cargo.toml  README.md  client.pl  notes.md
docs/: overview.md
src/: console.rs  exitcode.rs  expiroset.rs  filters.rs  main.rs  minecraft.rs  ready.rs  secretary.rs  slang.rs  util.rs
