[package]
name = "mcclwrap"
version = "0.1.0"
authors = ["Tilwa Qendov <tilwa.qendov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tear = { version = "0.4", path = "../tear" }
lazy_static = "1.4"

futures = "0.3"
tokio = { version = "0.2", features = ["macros", "uds", "stream", "io-std", "io-util", "rt-core", "process", "signal", "sync", "time"] }
nix = "0.18"

# Disable unicode because we don't need it
regex = { version = "1.3", default-features = false, features = ["std", "perf"] }
